--- a/HardcoreMines2/HardcoreMines2.csproj
+++ b/HardcoreMines2/HardcoreMines2.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="hardcore_monster.cs" />
+    <Compile Include="ModConfig.cs" />
     <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="treasure_item.cs" />
