--- a/HardcoreMines2/Manifest.json
+++ b/HardcoreMines2/Manifest.json
@@ -1,22 +1,10 @@
-<<<<<<< HEAD
-﻿{
-  "Name": "Hardcore Mine 2",
-  "Author": "ItsLittany",
-  "Version": "1.1.6",
-  "Description": "Updated version of Hardcore Mines",
-  "UniqueID": "itslittany.HardcoreMines2",
-  "EntryDll": "HardcoreMines2.dll",
-  "MinimumApiVersion": "2.10.0",
-  "UpdateKeys": [ "Nexus:6411" ]
-=======
 {
   "Name": "Hardcore Mine 2",
   "Author": "ItsLittany",
-  "Version": "1.3.6",
-  "Description": "Updated version of Hardcore Mines works with 1.5",
+  "Version": "1.4.0",
+  "Description": "Hardcore Mine 2: increase risk and reward in the mines",
   "UniqueID": "itslittany.HardcoreMines2",
   "EntryDll": "HardcoreMines2.dll",
   "MinimumApiVersion": "2.10.0",
   "UpdateKeys": [ "Nexus:6411" ]
->>>>>>> dev
 }
